<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="withText"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/warming"
        android:orderInCategory="100"
        android:showAsAction="withText"
        android:title="@string/menu_disclaimer" />
    <item
        android:id="@+id/text"
        android:orderInCategory="100"
        android:showAsAction="withText"
        android:title="@string/menu_view_text" />
    <item
        android:id="@+id/auto_send_message"
        android:orderInCategory="100"
        android:showAsAction="withText"
        android:title="@string/menu_auto_send_message" />
</menu>